REST api function added

--- a/RBMRB/DESCRIPTION
+++ b/RBMRB/DESCRIPTION
@@ -9,5 +9,4 @@ Description: Access BMRB data directly from interent from R envirnment
 License: GNU GENERAL PUBLIC LICENSE V 2.0
 LazyData: TRUE
 RoxygenNote: 5.0.1
-Imports: httr,
-    reshape2
+Imports: data.table,httr,rjson
