filter feature added need testing

--- a/RBMRB/NAMESPACE
+++ b/RBMRB/NAMESPACE
@@ -5,5 +5,6 @@ export(convert_cs_to_c13hsqc)
 export(convert_cs_to_n15hsqc)
 export(fetch_atom_chemical_shifts)
 export(fetch_entry_chemical_shifts)
+export(filter_residue)
 export(simulate_c13hsqc)
 export(simulate_n15hsqc)
