--- a/RBMRB/NAMESPACE
+++ b/RBMRB/NAMESPACE
@@ -6,6 +6,7 @@ export(TOCSY)
 export(chemical_shift_corr)
 export(convert_cs_to_c13hsqc)
 export(convert_cs_to_n15hsqc)
+export(convert_cs_to_tocsy)
 export(fetch_atom_chemical_shifts)
 export(fetch_entry_chemical_shifts)
 export(filter_residue)
