--- a/RBMRB/DESCRIPTION
+++ b/RBMRB/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: RBMRB
 Type: Package
-Title: BMRB data in R environment
+Title: BMRB Data Access and Visualization 
 Version: 2.0
 Date: 2016-11-08
 Author: Kumaran Baskaran
 Maintainer: Kumaran Baskaran<kbaskaran@bmrb.wisc.edu>
-Description: Access NMR chemical shift data of macromolecules and metabolites from BMRB database in R envirnment. See http://bmrb.wisc.edu/ for more information about BMRB
+Description: BMRB <http://www.bmrb.wisc.edu/> collects, annotates, archives, and disseminates (worldwide in the public domain) the important spectral and quantitative data derived from NMR(Nuclear Magnetic Resonance) spectroscopic investigations of biological macromolecules and metabolites. This package provides an interface to BMRB database for easy data access and a minimal set of data visualizations. 
 Depends:R(>= 3.3.0)
 License: GPL-2
+URL: https://github.com/uwbmrb/RBMRB, https://github.com/kumar-physics/RBMRB
 LazyData: TRUE
 RoxygenNote: 5.0.1
 Imports: data.table(>= 1.9.6),
