res chem shift method added

--- a/RBMRB/NAMESPACE
+++ b/RBMRB/NAMESPACE
@@ -9,4 +9,5 @@ export(convert_cs_to_n15hsqc)
 export(convert_cs_to_tocsy)
 export(fetch_atom_chemical_shifts)
 export(fetch_entry_chemical_shifts)
+export(fetch_res_chemical_shifts)
 export(filter_residue)
