cs filter added

--- a/RBMRB/NAMESPACE
+++ b/RBMRB/NAMESPACE
@@ -4,6 +4,7 @@ export(HSQC_13C)
 export(HSQC_15N)
 export(TOCSY)
 export(chemical_shift_corr)
+export(chemical_shift_hist)
 export(convert_cs_to_c13hsqc)
 export(convert_cs_to_n15hsqc)
 export(convert_cs_to_tocsy)
