Doc updated for v2.0.2 ready for release

--- a/RBMRB/NAMESPACE
+++ b/RBMRB/NAMESPACE
@@ -5,6 +5,7 @@ export(HSQC_15N)
 export(TOCSY)
 export(chemical_shift_corr)
 export(chemical_shift_hist)
+export(chemical_shift_hists)
 export(convert_cs_to_c13hsqc)
 export(convert_cs_to_n15hsqc)
 export(convert_cs_to_tocsy)
