--- a/RBMRB/DESCRIPTION
+++ b/RBMRB/DESCRIPTION
@@ -2,7 +2,7 @@ Package: RBMRB
 Type: Package
 Title: BMRB Data Access and Visualization 
 Version: 2.0.2
-Date: 2016-11-08
+Date: 2017-01-05
 Author: Kumaran Baskaran
 Maintainer: Kumaran Baskaran<kbaskaran@bmrb.wisc.edu>
 Description: The Biological Magnetic Resonance Data Bank (BMRB,<http://www.bmrb.wisc.edu/>) collects, annotates, archives, and disseminates (worldwide in the public domain) the important spectral and quantitative data derived from NMR(Nuclear Magnetic Resonance) spectroscopic investigations of biological macromolecules and metabolites. This package provides an interface to BMRB database for easy data access and includes a minimal set of data visualization functions. Users are encouraged to make their own data visualizations using BMRB data. 
@@ -15,4 +15,5 @@ Imports: data.table(>= 1.9.6),
           httr(>= 1.2.1),
           rjson(>= 0.2.15),
           ggplot2(>= 2.1.0),
-          plotly(>= 4.5.2)
+          plotly(>= 4.5.2),
+          stats
