--- a/RBMRB/NAMESPACE
+++ b/RBMRB/NAMESPACE
@@ -9,6 +9,7 @@ export(chemical_shift_hists)
 export(convert_cs_to_c13hsqc)
 export(convert_cs_to_n15hsqc)
 export(convert_cs_to_tocsy)
+export(export_star_data)
 export(fetch_atom_chemical_shifts)
 export(fetch_entry_chemical_shifts)
 export(fetch_res_chemical_shifts)
