Updated to BMRB API v2.0

--- a/RBMRB/NAMESPACE
+++ b/RBMRB/NAMESPACE
@@ -12,5 +12,6 @@ export(convert_cs_to_tocsy)
 export(export_star_data)
 export(fetch_atom_chemical_shifts)
 export(fetch_entry_chemical_shifts)
+export(fetch_entry_cs)
 export(fetch_res_chemical_shifts)
 export(filter_residue)
