--- a/RBMRB/DESCRIPTION
+++ b/RBMRB/DESCRIPTION
@@ -1,19 +1,28 @@
 Package: RBMRB
 Type: Package
-Title: BMRB Data Access and Visualization 
-Version: 2.0.4
-Date: 2017-03-03
+Title: BMRB Data Access and Visualization
+Version: 2.1.0
+Date: 2017-08-15
 Author: Kumaran Baskaran
 Maintainer: Kumaran Baskaran<kbaskaran@bmrb.wisc.edu>
-Description: The Biological Magnetic Resonance Data Bank (BMRB,<http://www.bmrb.wisc.edu/>) collects, annotates, archives, and disseminates (worldwide in the public domain) the important spectral and quantitative data derived from NMR(Nuclear Magnetic Resonance) spectroscopic investigations of biological macromolecules and metabolites. This package provides an interface to BMRB database for easy data access and includes a minimal set of data visualization functions. Users are encouraged to make their own data visualizations using BMRB data. 
-Depends:R(>= 3.3.0)
+Description: The Biological Magnetic Resonance Data Bank (BMRB,<http://
+    www.bmrb.wisc.edu/>) collects, annotates, archives, and disseminates (worldwide
+    in the public domain) the important spectral and quantitative data derived
+    from NMR(Nuclear Magnetic Resonance) spectroscopic investigations of biological
+    macromolecules and metabolites. This package provides an interface to BMRB
+    database for easy data access and includes a minimal set of data visualization
+    functions. Users are encouraged to make their own data visualizations using BMRB
+    data.
+Depends:
+    R(>= 3.4.0)
 License: GPL-2
 URL: https://github.com/uwbmrb/RBMRB, https://github.com/kumar-physics/RBMRB
 LazyData: TRUE
-RoxygenNote: 5.0.1
-Imports: data.table(>= 1.9.6),
-          httr(>= 1.2.1),
-          rjson(>= 0.2.15),
-          ggplot2(>= 2.1.0),
-          plotly(>= 4.5.2),
-          stats
+RoxygenNote: 6.0.1
+Imports:
+    data.table(>= 1.9.8),
+    httr(>= 1.2.1),
+    rjson(>= 0.2.15),
+    ggplot2(>= 2.2.0),
+    plotly(>= 4.5.6),
+    stats
