--- a/RBMRB/NAMESPACE
+++ b/RBMRB/NAMESPACE
@@ -4,7 +4,9 @@ export(HSQC_13C)
 export(HSQC_15N)
 export(TOCSY)
 export(chemical_shift_corr)
+export(chemical_shift_corr_res)
 export(chemical_shift_hist)
+export(chemical_shift_hist_res)
 export(chemical_shift_hists)
 export(convert_cs_to_c13hsqc)
 export(convert_cs_to_n15hsqc)
@@ -15,3 +17,4 @@ export(fetch_entry_chemical_shifts)
 export(fetch_entry_cs)
 export(fetch_res_chemical_shifts)
 export(filter_residue)
+importFrom(plotly,"%>%")
