--- a/RBMRB/NAMESPACE
+++ b/RBMRB/NAMESPACE
@@ -3,8 +3,8 @@
 export(HSQC_13C)
 export(HSQC_15N)
 export(TOCSY)
-export(chemical_shift_corr)
-export(chemical_shift_corr_res)
+export(atom_chem_shift_corr)
+export(chem_shift_corr)
 export(chemical_shift_hist)
 export(chemical_shift_hist_res)
 export(chemical_shift_hists)
