outlier filtering added

--- a/RBMRB/NAMESPACE
+++ b/RBMRB/NAMESPACE
@@ -16,5 +16,6 @@ export(fetch_atom_chemical_shifts)
 export(fetch_entry_chemical_shifts)
 export(fetch_entry_cs)
 export(fetch_res_chemical_shifts)
+export(filter_outlier)
 export(filter_residue)
 importFrom(plotly,"%>%")
