--- a/RBMRB/DESCRIPTION
+++ b/RBMRB/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: RBMRB
 Type: Package
 Title: BMRB Data Access and Visualization
-Version: 2.1.2
-Date: 2018-01-30
+Version: 2.1.4
+Date: 2020-10-25
 Author: Kumaran Baskaran
-Maintainer: Kumaran Baskaran<kbaskaran@bmrb.wisc.edu>
+Maintainer: Kumaran Baskaran<baskaran.kumaran@gmail.com>
 Description: The Biological Magnetic Resonance Data Bank (BMRB,<http://
-    www.bmrb.wisc.edu/>) collects, annotates, archives, and disseminates (worldwide
+    www.bmrb.io/>) collects, annotates, archives, and disseminates (worldwide
     in the public domain) the important spectral and quantitative data derived
     from NMR(Nuclear Magnetic Resonance) spectroscopic investigations of biological
     macromolecules and metabolites. This package provides an interface to BMRB
@@ -18,7 +18,7 @@ Depends:
 License: GPL-2
 URL: https://github.com/uwbmrb/RBMRB, https://github.com/kumar-physics/RBMRB
 LazyData: TRUE
-RoxygenNote: 6.0.1
+RoxygenNote: 7.1.1
 Imports:
     data.table(>= 1.9.8),
     httr(>= 1.2.1),
